# ambrosia

./: .gitignore  Cargo.toml  DISCLAIMER.md  README.md
data/diets/: vegan.toml  vegetarian.toml
data/groups/: cheese.toml  dairy.toml  fish.toml  meat.toml  shellfish.toml
src/: ingredient.rs  lib.rs  main.rs  mealie.rs  parse.rs
tests/: default_diets_parse.rs  default_groups_parse.rs
