[package]
name = "ambrosia"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "color"] }
delegate = "0.13.1"
nutype = { version = "0.5.1", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["serde"] }
